# ArduinoInputDevice

./: CMakeLists.txt  README.md
include/: input.h
inputLib/: CMakeLists.txt  input.cpp  input.h
keyboardLib/: CMakeLists.txt  Keyboard.cpp  Keyboard.h
mouseLib/: CMakeLists.txt  Mouse.cpp  Mouse.h
src/: CMakeLists.txt  InputDevice.cpp  InputDevice.h  keyboard.cc  keyboard.h  main.cpp  mouse.cc  mouse.h  transmitter.h
transmitterLib/: CMakeLists.txt  Transmitter.cpp  Transmitter.h
